// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden match results > recife-1 · concentrado + quebra-casco (referência) 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 15,
    "swimmer": 25,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 237,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 6,
  "timeMs": 118833,
  "upgrades": 3,
  "wavesCleared": 5,
}
`;

exports[`golden match results > recife-1 · contenção com baiacu 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 15,
    "swimmer": 23,
    "tidebreaker": 1,
  },
  "leaks": {
    "swimmer": 2,
  },
  "pearls": 185,
  "reef": 18,
  "state": "victory",
  "stepsExecuted": 6,
  "timeMs": 151500,
  "upgrades": 3,
  "wavesCleared": 5,
}
`;

exports[`golden match results > recife-1 · duas unidades cruas 1`] = `
{
  "guardians": 2,
  "kills": {
    "dartfish": 14,
    "swimmer": 21,
    "tidebreaker": 1,
  },
  "leaks": {
    "dartfish": 1,
    "swimmer": 4,
  },
  "pearls": 506,
  "reef": 15,
  "state": "victory",
  "stepsExecuted": 2,
  "timeMs": 138083,
  "upgrades": 0,
  "wavesCleared": 5,
}
`;

exports[`golden match results > recife-1 · novatos: camarões + peixe-pedra veneno + golfinho sonar 1`] = `
{
  "guardians": 4,
  "kills": {
    "dartfish": 14,
    "swimmer": 25,
    "tidebreaker": 1,
  },
  "leaks": {
    "dartfish": 1,
  },
  "pearls": 115,
  "reef": 19,
  "state": "victory",
  "stepsExecuted": 7,
  "timeMs": 141083,
  "upgrades": 3,
  "wavesCleared": 5,
}
`;

exports[`golden match results > recife-1 · novatos: camarões + tartaruga corrente + golfinho coro 1`] = `
{
  "guardians": 4,
  "kills": {
    "dartfish": 15,
    "swimmer": 25,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 112,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 7,
  "timeMs": 142483,
  "upgrades": 3,
  "wavesCleared": 5,
}
`;

exports[`golden match results > recife-1 · novatos: tubarão alfa na margem + tartaruga casco + camarão 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 15,
    "swimmer": 25,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 197,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 6,
  "timeMs": 112817,
  "upgrades": 3,
  "wavesCleared": 5,
}
`;

exports[`golden match results > recife-1 · novatos: tubarão frenesi + peixe-pedra emboscada + camarão 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 15,
    "swimmer": 25,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 182,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 6,
  "timeMs": 118767,
  "upgrades": 3,
  "wavesCleared": 5,
}
`;

exports[`golden match results > recife-1 · perfuração + água-viva controle 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 15,
    "swimmer": 25,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 237,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 6,
  "timeMs": 140567,
  "upgrades": 3,
  "wavesCleared": 5,
}
`;

exports[`golden match results > recife-1 · suporte com polvo (tinta) 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 14,
    "swimmer": 24,
    "tidebreaker": 1,
  },
  "leaks": {
    "dartfish": 1,
    "swimmer": 1,
  },
  "pearls": 179,
  "reef": 18,
  "state": "victory",
  "stepsExecuted": 6,
  "timeMs": 172133,
  "upgrades": 3,
  "wavesCleared": 5,
}
`;

exports[`golden match results > recife-2 · controle: água-viva elétrica no canal + baiacu na descida + perfuração 1`] = `
{
  "guardians": 5,
  "kills": {
    "dartfish": 13,
    "minnow": 40,
    "shellback": 9,
    "swimmer": 24,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 122,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 9,
  "timeMs": 261583,
  "upgrades": 4,
  "wavesCleared": 6,
}
`;

exports[`golden match results > recife-2 · dano: camarões nos laços e no centro + caranguejo no canal 1`] = `
{
  "guardians": 4,
  "kills": {
    "dartfish": 13,
    "minnow": 40,
    "shellback": 9,
    "swimmer": 24,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 167,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 9,
  "timeMs": 273250,
  "upgrades": 5,
  "wavesCleared": 6,
}
`;

exports[`golden match results > recife-2 · novatos: camarões nos laços + tubarão frenesi no canal + tartaruga corrente 1`] = `
{
  "guardians": 4,
  "kills": {
    "dartfish": 13,
    "minnow": 40,
    "shellback": 9,
    "swimmer": 24,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 107,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 9,
  "timeMs": 244433,
  "upgrades": 5,
  "wavesCleared": 6,
}
`;

exports[`golden match results > recife-2 · novatos: tubarão alfa + camarões + golfinho sonar 1`] = `
{
  "guardians": 4,
  "kills": {
    "dartfish": 13,
    "minnow": 40,
    "shellback": 9,
    "swimmer": 24,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 212,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 8,
  "timeMs": 208933,
  "upgrades": 4,
  "wavesCleared": 6,
}
`;

exports[`golden match results > recife-3 · controle: água-viva no laço leste + baiacu na descida 1`] = `
{
  "guardians": 5,
  "kills": {
    "dartfish": 8,
    "minnow": 76,
    "moray": 4,
    "needlefish": 17,
    "shellback": 10,
    "swimmer": 19,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 444,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 9,
  "timeMs": 447317,
  "upgrades": 4,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-3 · dano: camarões meio/norte/laço + caranguejo no canal 1`] = `
{
  "guardians": 4,
  "kills": {
    "dartfish": 8,
    "minnow": 76,
    "moray": 4,
    "needlefish": 17,
    "shellback": 10,
    "swimmer": 19,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 444,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 9,
  "timeMs": 385583,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-4 · controle: água-viva no arco externo + baiacu na saída 1`] = `
{
  "guardians": 6,
  "kills": {
    "dartfish": 11,
    "ghostJelly": 5,
    "minnow": 38,
    "moray": 5,
    "needlefish": 17,
    "shellback": 16,
    "swimmer": 14,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 505,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 10,
  "timeMs": 311167,
  "upgrades": 4,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-4 · dano: camarões ilha/norte/oeste/leste + caranguejo no fundo da espiral 1`] = `
{
  "guardians": 5,
  "kills": {
    "dartfish": 11,
    "ghostJelly": 1,
    "minnow": 38,
    "moray": 4,
    "needlefish": 17,
    "shellback": 16,
    "swimmer": 14,
    "tidebreaker": 1,
  },
  "leaks": {
    "ghostJelly": 4,
    "moray": 1,
  },
  "pearls": 505,
  "reef": 12,
  "state": "victory",
  "stepsExecuted": 10,
  "timeMs": 301650,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-5 · controle: água-viva na vala + baiacu antes da saída 1`] = `
{
  "guardians": 7,
  "kills": {
    "corruptedShark": 1,
    "dartfish": 14,
    "ghostJelly": 4,
    "minnow": 46,
    "moray": 5,
    "needlefish": 17,
    "shellback": 16,
    "swimmer": 10,
    "tidebreaker": 2,
  },
  "leaks": {
    "ghostJelly": 3,
    "moray": 1,
  },
  "pearls": 152,
  "reef": 13,
  "state": "victory",
  "stepsExecuted": 16,
  "timeMs": 262650,
  "upgrades": 9,
  "wavesCleared": 8,
}
`;

exports[`golden match results > recife-5 · dano: camarões proa/popa/leste/norte/sudeste + caranguejo sob o casco 1`] = `
{
  "guardians": 6,
  "kills": {
    "corruptedShark": 1,
    "dartfish": 14,
    "ghostJelly": 3,
    "minnow": 46,
    "moray": 5,
    "needlefish": 17,
    "shellback": 16,
    "swimmer": 10,
    "tidebreaker": 2,
  },
  "leaks": {
    "ghostJelly": 4,
    "moray": 1,
  },
  "pearls": 211,
  "reef": 12,
  "state": "victory",
  "stepsExecuted": 15,
  "timeMs": 253017,
  "upgrades": 9,
  "wavesCleared": 8,
}
`;

exports[`golden match results > recife-6 · controle: água-viva no casco + baiacu na saída + perfuração 1`] = `
{
  "guardians": 8,
  "kills": {
    "corruptedShark": 2,
    "dartfish": 18,
    "ghostJelly": 9,
    "minnow": 52,
    "moray": 5,
    "needlefish": 21,
    "shellback": 20,
    "swimmer": 11,
    "tidebreaker": 2,
  },
  "leaks": {
    "tidebreaker": 1,
  },
  "pearls": 299,
  "reef": 10,
  "state": "victory",
  "stepsExecuted": 18,
  "timeMs": 381367,
  "upgrades": 10,
  "wavesCleared": 9,
}
`;

exports[`golden match results > recife-6 · dano: camarões convés/nordeste/mastro/casco/sul + caranguejo na quilha 1`] = `
{
  "guardians": 7,
  "kills": {
    "corruptedShark": 2,
    "dartfish": 18,
    "ghostJelly": 1,
    "minnow": 52,
    "moray": 5,
    "needlefish": 21,
    "shellback": 20,
    "swimmer": 11,
    "tidebreaker": 3,
  },
  "leaks": {
    "ghostJelly": 8,
  },
  "pearls": 223,
  "reef": 12,
  "state": "victory",
  "stepsExecuted": 18,
  "timeMs": 356883,
  "upgrades": 11,
  "wavesCleared": 9,
}
`;

exports[`golden match results > recife-6 · novatos: camarões + tubarão alfa + tartaruga casco + peixe-pedra 1`] = `
{
  "guardians": 7,
  "kills": {
    "corruptedShark": 2,
    "dartfish": 18,
    "ghostJelly": 5,
    "minnow": 52,
    "moray": 5,
    "needlefish": 21,
    "shellback": 20,
    "swimmer": 11,
    "tidebreaker": 3,
  },
  "leaks": {
    "ghostJelly": 4,
  },
  "pearls": 322,
  "reef": 16,
  "state": "victory",
  "stepsExecuted": 17,
  "timeMs": 333800,
  "upgrades": 10,
  "wavesCleared": 9,
}
`;
